--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -1,6 +1,11 @@
+
+.container {
+    padding: 2px 16px;
+}
+
 img.image-city {
-  width: 40px;
-  height: 70px;
+  width: 200px;
+  height: 200px;
   text-align: center;
   font-style: italic;
   font-size: smaller;
@@ -8,8 +13,25 @@ img.image-city {
   border: thin silver solid;
   margin: 0.5em;
   padding: 0.5em;
-  position: absolute;
 }
+
+.img__description {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  visibility: hidden;
+  opacity: 0;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.img__wrap:hover .img__description {
+  visibility: visible;
+}
+
 .row {
   width: auto;
 }
@@ -38,9 +60,21 @@ div .tile:hover {
 
 }
 
-#title_brand {
-  margin: auto;
+.row-class {
+  white-space: pre-line;
 }
+  
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    min-height: 200px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
+
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@charset "UTF-8";/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
