upgraded UI for itenerary page

--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -33,6 +33,10 @@ img.image-city {
 .row {
   width: auto;
 }
+.row.itenerary{
+  overflow-x: scroll;
+  height: 400px;
+}
 div .tile {
   width: 50%;
   height: 400px;
@@ -157,9 +161,185 @@ input.datepick {
 }
 .datepick{
   margin:auto;
->>>>>>> 35da562084b5d90a31d8e8b099d77d9349af8844
+}
+.sortable .starttime {
+  position: relative;
+  margin: auto;
+}
+.sortable .endtime {
+  position: relative;
+  margin: auto;
+}
+.sortable .itemname {
+  position: relative;
+  margin: auto;
+  display: block;
+  text-align: center;
+  font-size: 1vw;
+}
+.sortable .day-item{
+  padding-left: 0;
+  border-left:0px;
+  border-right: 0px;
+  border-top: 0px;
+  border-bottom:1px solid #0d2148;
+  background: white;
+  font-weight: 700;
+  cursor: move;
+}
+.invisible-list li{
+  display: none;
+}
+div .ui-sortable{
+  width: 100%;
+}
+.panel.daycolumn{
+  width: 20%;
+}
+.container.appcontainer {
+  margin: 0;
+}
+.scrollable-sidebar {
+  transform:translate3d(0,0,0);
+  overflow-y: scroll;
+  overflow-x:hidden;
+  max-height: 700px;
+}
+.startend {
+  text-align: center;
+  font-size: 1.2vw;
+}
+.sortable .sidebar-list {
+  padding:0;
+  height: 50px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid grey;
+}
+.sortable .sidebar-list  .itemname{
+  font-size: 10px;
+  overflow: hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  margin-left: 0;
+  max-width: 90%;
+  padding-top: 5px;
+  display: inline;
+  position: absolute;
+}
+.sortable .sidebar-list .startend{
+  display: inline;
+}
+.panel.listitem{
+  height: 30px;
+}
+.tn-img{
+  height: 100%;
+  width: 40%;
+  border-radius: 100%;
+  padding: 5px 10px 5px 10px; 
+}
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+
+
+
+.panel-heading h4 {
+   color: #fafafa;
+   font-size: 1.2vw;
+   font-weight: 700;
+   font-style:normal;
+   font-family: "Roboto", helvetica, arial, sans-serif;
+   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+   text-transform:uppercase;
+}
+
+
+/*** Table Styles **/
+
+.panel.panel-body {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+  animation: float 5s infinite;
+  box-shadow: 0;
+}
+ 
+.panel .panel.panel-heading {
+  color:#D5DDE5;;
+  background-color:#1b1e24;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:5px;
+  text-align:center;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
+  margin-bottom: 0;
+  cursor: pointer;
+}
+
+th:first-child {
+  border-top-left-radius:3px;
+}
+ 
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
 }
   
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+.sortable .day-item:hover {
+  background:rgba(208, 208, 225,0.2);
+
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+
+
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@charset "UTF-8";/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
