--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -21,29 +21,62 @@ div .tile {
 }
 
 div .tile .title {
-  position: relative;
   color:white;
-  font-size:30px;
-  z-index:1;
-  transition:top .5s ease;
-  text-transform: uppercase;
-  top:120px;
+  font-size:20px;
+  line-height: 100%;
+  color:white;
+  padding-top: 100px;
+  z-index: 1;
+  transition: padding-top .7s ease;
 }
-
 div .tile {
   display:flex;
   justify-content:center;
-  align-items:center;
-  align-self:center;   
   background-position:center;
   background-size:cover;
+  text-transform: uppercase;
 }
 div .tile:hover {
   opacity: 0.9;
 }
 
 div .tile:hover .title{
-  top:90px;
+  padding-top: 50px;
+}
+
+.button {
+  padding-top: 300px;
+  width: 30%;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .35s ease;
+}
+
+.button .buttonleft {
+  width: 100%;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+  margin-left: 10px;
+  float: left;
+}
+
+.button .buttonright {
+  position:relative;
+  width: 100%;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+  float:right;
+  margin-right: 10px;
+}
+
+div .tile:hover .button {
+  opacity: 1;
 }
 
 .card {
@@ -62,31 +95,34 @@ div .tile:hover .title{
 .cbox {
   display: none;
 }
+.catpickpanel{
+  background-size:cover;
+  background-image: url('/images/panelbg.jpg');
+  opacity:70%;
+}
+
 label.catpicker {
   border:0;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
-  border-radius: 25px;
-  background: rgba(209, 209, 224,0.8);
-  color: black;
-  outline: none;
+  background: transparent;
+  color: white;
+  outline: 1px solid white;
   font-weight: 600;
 }
 label.catpicker:hover {
   border:0;
-  border-radius: 25px;
-  background: rgba(255, 51, 0,1);
-  color: white;
+  background: white;
+  color: black;
 }
+
 label.label_selected {
   border:0;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
-  border-radius: 25px;
-  background: rgba(255, 51, 0,1);
-  color: white;
+  background: white;
+  color: black;
 }
-
 .btn_category {
   border:0;
   margin: 5px 5px 5px 5px;
@@ -104,7 +140,6 @@ label.label_selected {
   border-radius: 25px;
   background: rgba(255, 51, 0,1);
   color: white;
-
 }
 .btn_category:hover {
   border:0;
@@ -114,14 +149,14 @@ label.label_selected {
 }
 .btn-plan {
   width: 100%;
-  background:rgba(255, 51, 0,1);
+  background:transparent;
   color: white !important;
   font-weight: 600 !important;
   outline: none;
   margin-top: 20px;
 }
 .btn-plan:hover {
-  background: rgba(204, 41, 0,1)
+   text-shadow: 2px 2px 10px white;
 }
 [type="date"] {
   background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
@@ -129,7 +164,7 @@ label.label_selected {
 [type="date"]::-webkit-inner-spin-button {
   display: none;
 }
-[type="date"]::-webkit-calendar-picker-indicator {
+[type="date"]::-webkit-calendar-picker-indicator{
   opacity: 0;
 }
 input.datepick {
@@ -176,7 +211,6 @@ input.datepick {
   transition: all 0.4s ease-in-out 0s;
   overflow:hidden;
   text-overflow: ellipsis;
-
 }
 .hvrbox:hover .hvrbox-layer_top,
 .hvrbox.active .hvrbox-layer_top {
@@ -204,6 +238,7 @@ input.datepick {
   padding-top: 2px;
   display: none;
 }
+
 .carousel{
   height:500px;
   }
@@ -231,6 +266,7 @@ input.datepick {
   color:#636b6f;
   font-size: 12px;  
 }
+
 .carousel.slide{
   padding:0;
 }
@@ -238,6 +274,10 @@ input.datepick {
 .horizontal-rule{
   margin-bottom:0px;
   margin-top:5px; 
+  height: 2px;
+  color: black;
+  display: block;
+  width:15%;
 }
 
 .search-form .form-group {
@@ -250,6 +290,7 @@ input.datepick {
   border-radius: 25px;
   border: 1px solid #ccc;
 }
+
 .search-form .form-group input.form-control {
   padding-right: 20px;
   border: 0 none;
@@ -257,6 +298,7 @@ input.datepick {
   box-shadow: none;
   display:block;
 }
+
 .search-form .form-group input.form-control::-webkit-input-placeholder {
   display: none;
 }
