--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -95,46 +95,55 @@ div .tile:hover .button {
 .cbox {
   display: none;
 }
+
 .catpickpanel{
   background-size:cover;
-  background-image: url('/images/panelbg.jpg');
-  opacity:70%;
+  background:white;
+  margin-top: 10px;
+  border:2px solid;
+  border-color:#454545;
+  border-radius:4px;
+  opacity:70%;  
 }
 
 label.catpicker {
-  border:0;
+  border:2px solid;
+  border-radius: 4px;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
   background: transparent;
-  color: white;
-  outline: 1px solid white;
+  color:text:#454545;
   font-weight: 600;
 }
+
 label.catpicker:hover {
-  border:0;
-  background: white;
-  color: black;
+  -webkit-transition: background .2s; /* Safari */
+  transition: background .2s;
+  border:2px solid;
+  border-color:white;
+  background: #454545;
+  color: white;
 }
 
 label.label_selected {
-  border:0;
+  border:2px solid white;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
-  background: white;
-  color: black;
+  background: #454545;
+  color: white;
 }
 .btn_category {
-  border:0;
+  border:2px solid;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
   border-radius: 25px;
-  background: rgba(209, 209, 224,0.8);
-  color: black;
+  background: rgb(0, 143, 179);
+  color: white;
   outline: none;
   font-weight: 600;
 }
 .btn_selected {
-  border:0;
+  border:2px;
   margin: 5px 5px 5px 5px;
   padding: 3px 8px 3px 8px;
   border-radius: 25px;
@@ -147,16 +156,21 @@ label.label_selected {
   background: rgba(255, 51, 0,1);
   color: white;
 }
-.btn-plan {
+.btn-plan, #plan{
+  -webkit-transition: background .2s; /* Safari */
+  transition: background .2s;
+  color: #454545; 
   width: 100%;
   background:transparent;
-  color: white !important;
-  font-weight: 600 !important;
-  outline: none;
-  margin-top: 20px;
 }
-.btn-plan:hover {
-   text-shadow: 2px 2px 10px white;
+.btn-plan:hover ,#plan:hover{
+  background: #454545;
+  color:white;
+}
+#datepicker{
+  border:2px solid;
+  border-color:#454545;
+  border-radius:4px;
 }
 [type="date"] {
   background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
