--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -50,9 +50,11 @@ div .tile:hover .title{
   text-align: center;
   opacity: 0;
   transition: opacity .35s ease;
+  background: transparent;
 }
 
 .button .buttonleft {
+  background: transparent;
   width: 100%;
   padding: 12px 48px;
   text-align: center;
@@ -61,9 +63,11 @@ div .tile:hover .title{
   z-index: 1;
   margin-left: 10px;
   float: left;
+  border-radius: 4px;
 }
 
 .button .buttonright {
+  background: transparent;
   position:relative;
   width: 100%;
   padding: 12px 48px;
@@ -73,10 +77,16 @@ div .tile:hover .title{
   z-index: 1;
   float:right;
   margin-right: 10px;
+  border-radius: 4px;
 }
 
 div .tile:hover .button {
   opacity: 1;
+}
+.input-group-addon {
+    border-radius: 4px;
+    border: 0px;
+    background-color: transparent;
 }
 
 .card {
@@ -171,6 +181,8 @@ label.label_selected {
   border:2px solid;
   border-color:#454545;
   border-radius:4px;
+  margin-right:5px;
+  align:center;
 }
 [type="date"] {
   background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
