--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -228,33 +228,14 @@ label.label_selected {
   background: #454545;
   color:white;
 }
-#datepicker{
+/*#datepicker{
   border:2px solid;
   border-color:#454545;
   border-radius:4px;
   margin-right:5px;
   align:center;
-}
-[type="date"] {
-  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
-}
-[type="date"]::-webkit-inner-spin-button {
-  display: none;
-}
-[type="date"]::-webkit-calendar-picker-indicator{
-  opacity: 0;
-}
-input.datepick {
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
-  background-color: #fff;
-  padding: 3px 5px;
-  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
-  width: 190px;
-}
-.datepick{
-  margin:auto;
-}
+}*/
+
 .sortable .starttime {
   position: relative;
   margin: auto;
@@ -374,8 +355,6 @@ div .ui-sortable{
 }
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
 
-
-
 .panelheadingdiv h4 {
    color: #fafafa;
    font-size: 1.2vw;
@@ -386,9 +365,7 @@ div .ui-sortable{
    text-transform:uppercase;
 }
 
-
 /*** Table Styles **/
-
 .panel.panel-body {
   background: white;
   border-radius:3px;
@@ -437,65 +414,11 @@ div .ui-sortable{
   margin-bottom: 0;
   cursor: pointer;
 }
-th:first-child {
-  border-top-left-radius:3px;
-}
- 
-th:last-child {
-  border-top-right-radius:3px;
-  border-right:none;
-}
-  
-tr {
-  border-top: 1px solid #C1C3D1;
-  border-bottom-: 1px solid #C1C3D1;
-  color:#666B85;
-  font-size:16px;
-  font-weight:normal;
-  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
-}
  
 .sortable .day-item:hover {
   background:rgba(208, 208, 225,0.2);
-
-}
- 
-tr:first-child {
-  border-top:none;
 }
 
-tr:last-child {
-  border-bottom:none;
-}
- 
-tr:nth-child(odd) td {
-  background:#EBEBEB;
-}
- 
-tr:nth-child(odd):hover td {
-  background:#4E5066;
-}
-
-tr:last-child td:first-child {
-  border-bottom-left-radius:3px;
-}
- 
-tr:last-child td:last-child {
-  border-bottom-right-radius:3px;
-}
- 
-td {
-  background:#FFFFFF;
-  padding:20px;
-  text-align:left;
-  vertical-align:middle;
-  font-weight:300;
-  font-size:18px;
-  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-  border-right: 1px solid #C1C3D1;
-}
-
-}
 .hvrbox,
 .hvrbox * {
   box-sizing: border-box;
