--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -271,10 +271,14 @@ label.label_selected {
   white-space:nowrap;
   text-overflow:ellipsis;
   margin-left: 0;
+  margin-top: 5px;
   max-width: 280px;
   padding-top: 5px;
+}
+.item-wrapper{
+  text-align: center;
+  font-size: 1;
   display: inline;
-  position: absolute;
 }
 /*.sortable .itemname {
   position: relative;
@@ -439,8 +443,6 @@ position:fixed;
   margin-left: 0;
   max-width: 90%;
   padding-top: 5px;
-  display: inline;
-  position: absolute;
 }
 .sortable .sidebar-list .startend{
   display: inline;
@@ -450,7 +452,7 @@ position:fixed;
 }
 .tn-img{
   height: 100%;
-  width: 22.5%;
+  width: 100%;
   border-radius: 10px;
   padding: 5px 10px 5px 10px; 
   max-height: 100px;
@@ -462,16 +464,19 @@ position:fixed;
   box-shadow:2px 2px 2px #888888;
   border : 2px solid #1b1e24;
 }*/
-.day-item div img{
+.day-item img{
   height: 100%;
-  width: 22.5%;
+  width: 100%;
   border-radius: 10px;
   padding: 5px 10px 5px 10px; 
   max-height: 100px;
   max-width: 100px;
 }
-.img-wrapper{
+li .img-wrapper{
   display: inline;
+  height: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
 
