--- a/TripAdvisor/public/css/app.css
+++ b/TripAdvisor/public/css/app.css
@@ -1,8 +1,3 @@
-#attrcontent{
-  display: none;
-}
-
-
 .stars-container, #stars {
   position: relative;
   color: transparent;
@@ -450,13 +445,13 @@ position:fixed;
   width: 700px;
 }
 .duration {
-    font-size: 0.7vw;
+    font-size: 10px;
     font-weight: 700;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     margin-left: 0 !important;
-    max-width: 90%;
+    /*max-width: 90%;*/
     padding-top: 5px;
     display: inline;
     position: relative !important;
